--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,10 +98,10 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.47")
     kapt("com.google.dagger:hilt-compiler:2.47")
 
-    // ExoPlayer per audio
-    implementation("com.google.android.exoplayer:exoplayer:2.20.1")
-    implementation("com.google.android.exoplayer:exoplayer-core:2.20.1")
-    implementation("com.google.android.exoplayer:exoplayer-ui:2.20.1")
+    // ExoPlayer per audio enterprise - VERSIONE STABILE
+    implementation("com.google.android.exoplayer:exoplayer:2.19.1")
+    implementation("com.google.android.exoplayer:exoplayer-core:2.19.1")
+    implementation("com.google.android.exoplayer:exoplayer-ui:2.19.1")
 
     // Filament 3D Engine - ENTERPRISE EDITION (versione stabile disponibile)  
     implementation("com.google.android.filament:filament-android:1.17.1")
