--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,16 +83,16 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
 
-    // Jetpack Compose - Versioni stabili compatibili (mantieni tutte le features)
+    // Jetpack Compose - VERSIONI STABILI CHE ESISTONO (mantieni tutte le features)
     implementation("androidx.activity:activity-compose:1.7.2")
-    implementation("androidx.compose.ui:ui:1.5.4")
+    implementation("androidx.compose.ui:ui:1.4.8")
     implementation("androidx.compose.material3:material3:1.1.2")
-    implementation("androidx.compose.ui:ui-tooling-preview:1.5.4")
-    debugImplementation("androidx.compose.ui:ui-tooling:1.5.4")
+    implementation("androidx.compose.ui:ui-tooling-preview:1.4.8")
+    debugImplementation("androidx.compose.ui:ui-tooling:1.4.8")
     
-    // Compose Animations - Versioni stabili (mantieni animazioni enterprise)
-    implementation("androidx.compose.animation:animation:1.5.4")
-    implementation("androidx.compose.animation:animation-core:1.5.4")
+    // Compose Animations - VERSIONI STABILI (mantieni animazioni enterprise)
+    implementation("androidx.compose.animation:animation:1.4.8")
+    implementation("androidx.compose.animation:animation-core:1.4.8")
 
     // Hilt - Enterprise DI (stable version)
     implementation("com.google.dagger:hilt-android:2.47")
@@ -114,8 +114,8 @@ dependencies {
     // Advanced Graphics Extensions
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
 
-    // Material Icons - Updated
-    implementation("androidx.compose.material:material-icons-extended:1.5.8")
+    // Material Icons - VERSIONE STABILE ESISTENTE
+    implementation("androidx.compose.material:material-icons-extended:1.4.8")
 
     // Lifecycle, ViewModel - Enterprise Architecture
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
